--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,9 @@
     margin: 0;
 }
 
+.primary_color{
+    color: #f52c2c;
+}
 /* nav css Design */
 nav{
     background-color: black;
@@ -80,4 +83,110 @@ h1 span{
     font-weight: 400;
     font-size: 20px;
     margin-left: 20px;
+}
+
+/* Service Section CSS */
+
+.service_section{
+    width: 100%;
+    height: 100vh;
+    background-image: url(../asset/image/footer-bg.png),linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0.9));
+    background-blend-mode: overlay;
+    color: white;
+    /* padding-bottom: 120px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+.service_left_area{
+    width: 100%;
+    padding-left: 150px;
+    
+}
+.service_list_btn{
+    background-color:#ffffff ;
+    border: none;
+    border-radius: 50px;
+    padding: 15px 40px;
+    font-size: 20px;
+    font-weight: 400;
+    color: #757575;
+}
+.service_details h2{
+  font-weight: 700;
+  font-size: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #becfd0;
+}
+
+.service_details p{
+    color: #becfd0;
+    font-size: 20px;
+
+}
+.service_li{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #becfd0;
+}
+
+.athor_details{
+    display: flex;
+    align-items: center;
+
+}
+.athor_image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 80px;
+}
+.athor_details img{
+    border-radius: 50%;
+    width: 80px;
+    margin-right: 10px;
+}
+.more_details_div{
+    border-left: 2px solid #f52c2c;
+}
+.more_details_btn{
+    color: #f52c2c;
+    border: none;
+    border-radius: 50px;
+    padding: 20px 30px;
+    margin-left: 10px;
+}
+
+.service_right_area{
+    width: 50%;
+    padding-right: 150px;
+}
+.service_div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.service_section_item{
+    width: 300px;
+    height: 300px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+    margin-bottom: 20px;
+
+}
+.service_section_item img{
+    width: 100px;
+}
+
+.service_section_item p{
+    color: black;
+    font-weight: 600;
+    margin-top: 10px;
 }
